# cohere-test

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
classify/: index.html
cv/: index.html
docs/: classify.md  cv.md  index.md  jd.md  rag.md  summarize.md
jd/: index.html
rag/: index.html
search/: search_index.json
src/: rag.py  summarize.py  support.py
summarize/: index.html
